--- a/index.html
+++ b/index.html
@@ -1,19 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tea&Tea | Home</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap-reboot.min.css" integrity="sha512-wV3xzHEw4kJUF4G0fyXSefKmUVhwwbOdZinJvOxmysxAXSZBl17porgPOcQBDBQTEwgGevxXGWAAQ/UPaSd0nw==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap-grid.min.css" integrity="sha512-cKoGpmS4czjv58PNt1YTHxg0wUDlctZyp9KUxQpdbAft+XqnyKvDvcGX0QYCgCohQenOuyGSl8l1f7/+axAqyg==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+        integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+        crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    
 
+<body>
+    <!-- Header Starts -->
+    <header id="header">
+        <!-- Language_Currency -->
+        <div class="language-currency">
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-sm-3 offset-sm-9">
+                        <span class="refund">30-day money back guarantee</span>
+                        <span class="dropdown">
+
+                            <a href="#" data-toggle="dropdown">
+                                <img src="./img/Icons/Flags/eng-flag.PNG" alt="England Flag">
+                                <span class="divider">|</span> USD <i class="fas fa-chevron-down"></i>
+                            </a>
+
+                            <div class="dropdown-menu">
+                                <div class="sub-header">
+                                    <h6>Languages</h6>
+                                </div>
+
+                                <div class="dropdown-container">
+                                    <a href="#" class="dropdown-item">
+                                        <img src="./img/Icons/Flags/german-flag.PNG" alt="German Flag">
+                                        <span>DE</span>
+                                    </a>
+                                    <a href="#" class="dropdown-item">
+                                        <img src="./img/Icons/Flags/eng-flag.PNG" alt="Eng Flag">
+                                        <span>EN</span>
+                                    </a>
+                                </div>
+
+                                <div class="sub-header">
+                                    <h6>Currencies</h6>
+                                </div>
+
+                                <div class="dropdown-container">
+
+                                    <a href="#" class="dropdown-item">
+                                        <img src="./img/Icons/Flags/us-flag.PNG" alt="USA Flag">
+                                        <span> USD</span>
+                                    </a>
+
+                                    <a href="#" class="dropdown-item">
+                                        <img src="./img/Icons/Flags/eur-flag.PNG" alt="Europe Flag">
+                                        <span> EUR</span>
+                                    </a>
+
+                                    <a href="#" class="dropdown-item">
+                                        <img src="./img/Icons/Flags/aus-flag.PNG" alt="Australia Flag">
+                                        <span>AUD</span>
+                                    </a>
+
+                                    <a href="#" class="dropdown-item">
+                                        <img src="./img/Icons/Flags/cad-flag.PNG" alt="Canada Flag">
+                                        <span>CAD</span>
+                                    </a>
+                                </div>
+
+                            </div>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Navbar -->
+        <div class="logo-navbar">
+            <div class="container">
+                <div class="navbar-container">
+                    <div class="row">
+                        <!-- Logo and Main-nav Container -->
+                        <div class="col-lg-9">
+                            <div class="main-nav-container">
+                                <!-- Logo Container -->
+                                <div class="logo-container">
+                                    <a href="index.html">
+                                        <img src="./img/Logo/logo.png" alt="Logo">
+                                    </a>
+                                </div>
+                                <!-- Main-menu -->
+                                <ul class="main-nav">
+                                    <li class="main-nav-item">
+                                        <a href="#" class="main-nav-link">Teas</a>
+                                    </li>
+                                    <li class="main-nav-item">
+                                        <a href="#" class="main-nav-link">Teaware</a>
+                                    </li>
+                                    <li class="main-nav-item">
+                                        <a href="#" class="main-nav-link">Loose Leaf Tea</a>
+                                    </li>
+                                    <li class="main-nav-item">
+                                        <a href="#" class="main-nav-link">Tea Bags</a></li>
+                                    <li class="main-nav-item dropdown">
+                                        <a href="#" class="main-nav-link dropdown-toggle" data-toggle="dropdown">Lookbook</a>
+                                        <ul class="dropdown-menu">
+                                            <li class="dropdown-item"><a href="#">Cosmopolis</a></li>
+                                            <li class="dropdown-item"><a href="#">Sarcus</a></li>
+                                            <li class="dropdown-item">
+                                            <li class="dropdown-item"><a href="#">Fermentumo</a></li>
+                                            <li class="dropdown-item"><a href="#">Habitasse</a></li>
+                                            <li class="dropdown-item"><a href="#">Milancelos</a></li>
+                                            <li class="dropdown-item"><a href="#">Malesuado</a></li>
+                                        </ul>
+
+                                    </li>
+                                    <li class="main-nav-item">
+                                        <a href="#" class="main-nav-link">Faqs</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- Right-Menu -->
+                        <div class="col-lg-3">
+                            <div class="right-menu-container">
+                                <ul class="icon-container">
+                                    <li>
+                                        <a href="#">
+                                            <i class="fas fa-search"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="login.html">
+                                            <i class="far fa-user"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <i class="far fa-heart"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <i class="fas fa-shopping-cart"></i>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- Header Ends -->
+
+
+    <!-- Boostrap Scripts -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+        integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+        crossorigin="anonymous"></script>
+
+    <!-- My Script -->
     <script src="js/main.js"></script>
 </body>
+
 </html>
