--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tea&Tea | Home</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -109,13 +110,14 @@
                                         <a href="#" class="main-nav-link">Loose Leaf Tea</a>
                                     </li>
                                     <li class="main-nav-item">
-                                        <a href="#" class="main-nav-link">Tea Bags</a></li>
+                                        <a href="#" class="main-nav-link">Tea Bags</a>
+                                    </li>
                                     <li class="main-nav-item dropdown">
-                                        <a href="#" class="main-nav-link dropdown-toggle" data-toggle="dropdown">Lookbook</a>
+                                        <a href="#" class="main-nav-link dropdown-toggle"
+                                            data-toggle="dropdown">Lookbook</a>
                                         <ul class="dropdown-menu">
                                             <li class="dropdown-item"><a href="#">Cosmopolis</a></li>
                                             <li class="dropdown-item"><a href="#">Sarcus</a></li>
-                                            <li class="dropdown-item">
                                             <li class="dropdown-item"><a href="#">Fermentumo</a></li>
                                             <li class="dropdown-item"><a href="#">Habitasse</a></li>
                                             <li class="dropdown-item"><a href="#">Milancelos</a></li>
@@ -162,6 +164,73 @@
         </div>
     </header>
     <!-- Header Ends -->
+
+    <!-- Main Starts -->
+    <main id="main">
+
+        <!-- Showcase Slider -->
+        <section id="showcase">
+            <div id="showcaseCarousel" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#showcaseCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#showcaseCarousel" data-slide-to="1"></li>
+                    <li data-target="#showcaseCarousel" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+
+                    <div class="carousel-item active carousel-item-first">
+                        <img class="d-block w-100" src="./img/Showcase/showcase-img1.jpg" alt="First Image">
+                        <div class="carousel-caption carousel-caption-first">
+                            <h1 class="slider-header animate__animated animate__fadeInUp">Teaware <br> Collections from
+                                <br> $80*</h1>
+                            <p class="slider-text animate__animated animate__fadeInUp">
+                                Destibulum laoreet an risus porta quisque hasellus blandit <br> lacinia neque multrices
+                                de
+                                loremous
+                            </p>
+                            <a href="product.html" class="pass-link animate__animated animate__fadeInUp">Shop Now</a>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item carousel-item-second">
+                        <img class="d-block w-100" src="./img/Showcase/showcase-img2.jpg" alt="First Image">
+                        <div class="carousel-caption carousel-caption-second">
+                            <h5 class="slider-caption animate__animated animate__fadeInUp">Special Offer</h5>
+                            <h2 class="slider-header animate__animated animate__fadeInUp">Sale 70% off</h2>
+                            <p class="slider-text animate__animated animate__fadeInUp">
+                                Destibulum laoree an porta quisque cosmoplis de milancelos.
+                            </p>
+                            <a href="product.html" class="pass-link animate__animated animate__fadeInUp">Shop Now</a>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item carousel-item-third">
+                        <img class="d-block w-100" src="./img/Showcase/showcase-img3.jpg" alt="First Image">
+                        <div class="carousel-caption  carousel-caption-third">
+                            <h5 class="slider-caption animate__animated animate__fadeInUp">Tea Collection</h5>
+                            <h2 class="slider-header animate__animated animate__fadeInUp">Milancelos</h2>
+                            <p class="slider-text animate__animated animate__fadeInUp">
+                                Destibulum laoreet an risus porta quisque hasellus blandit <br> lacinia neque multrices
+                                de
+                                loremous
+                            </p>
+                            <a href="product.html" class="pass-link animate__animated animate__fadeInUp">Shop Now</a>
+                        </div>
+                    </div>
+
+                </div>
+                <a href="#showcaseCarousel" class="carousel-control-prev" role="button" data-slide="prev">
+                    <i class="fas fa-chevron-left fa-3x"></i>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a href="#showcaseCarousel" class="carousel-control-next" role="button" data-slide="next">
+                    <i class="fas fa-chevron-right fa-3x"></i>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </section>
+    </main>
+    <!-- Main Ends -->
 
 
     <!-- Boostrap Scripts -->
