Popular section is done

--- a/index.html
+++ b/index.html
@@ -6,14 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tea&Tea | Home</title>
+    <!-- Animate Style -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
         integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
         crossorigin="anonymous" />
+    <!-- Owl Carousel Style -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+        integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+        crossorigin="anonymous" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+        integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+        crossorigin="anonymous" />
+    <!-- Custom Style -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -182,7 +195,8 @@
                         <img class="d-block w-100" src="./img/Showcase/showcase-img1.jpg" alt="First Image">
                         <div class="carousel-caption carousel-caption-first">
                             <h1 class="slider-header animate__animated animate__fadeInUp">Teaware <br> Collections from
-                                <br> $80*</h1>
+                                <br> $80*
+                            </h1>
                             <p class="slider-text animate__animated animate__fadeInUp">
                                 Destibulum laoreet an risus porta quisque hasellus blandit <br> lacinia neque multrices
                                 de
@@ -229,6 +243,99 @@
                 </a>
             </div>
         </section>
+
+        <!-- Arrivals -->
+        <section id="arrivals">
+            <div class="container">
+                <!-- Arrival Header -->
+                <h2 class="section-header">New Arrivals</h2>
+                <div class="arrival-container">
+                    <div class="owl-carousel owl-theme">
+
+                        <div class="arrival">
+                            <div class="arrival-img">
+                                <img src="./img/Arrival/arrival_1.jpg" alt="Black Tea">
+                            </div>
+                            <div class="arrival-content">
+                                <h3 class="title">Black Tea Collection</h3>
+                                <p class="content">Pellentesque de fermentum mollis cosmo loremous</p>
+                                <a href="#" class="pass-link">Shop Now</a>
+                            </div>
+                        </div>
+
+                        <div class="arrival">
+                            <div class="arrival-img">
+                                <img src="./img/Arrival/arrival_2.jpg" alt="East Tea">
+                            </div>
+                            <div class="arrival-content">
+                                <h3 class="title">East Tea Collection</h3>
+                                <p class="content">Pellentesque de fermentum mollis cosmo loremous</p>
+                                <a href="#" class="pass-link">Shop Now</a>
+                            </div>
+
+                        </div>
+
+                        <div class="arrival">
+                            <div class="arrival-img">
+                                <img src="./img/Arrival/arrival_1.jpg" alt="Black Tea">
+                            </div>
+                            <div class="arrival-content">
+                                <h3 class="title">Black Tea Collection</h3>
+                                <p class="content">Pellentesque de fermentum mollis cosmo loremous</p>
+                                <a href="#" class="pass-link">Shop Now</a>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Popular -->
+        <section id="popular">
+            <div class="container">
+                <div class="section-heading">
+                    <h2 class="section-header">Most Popular</h2>
+                    <p class="section-paragraph">Pellentesque de fermentum mollis cosmo loremous</p>
+                </div>
+            </div>
+            <div class="popular-container">
+                    <div class="popular-card">
+                        <div class="popular-img">
+                            <img class="img-fluid" src="./img/Popular/popular_1.jpg" alt="Oolang Teas">
+                        </div>
+                        <div class="popular-content">
+                            <h3 class="title">Oolang Teas</h3>
+                            <p class="content">Nullam aliquet vestibulum augue non varius, cras nec congue elitos lorem.
+                                Duis tristique del ante nec aliquam praesent urna tellus.</p>
+                            <a href="#" class="pass-link">Shop Oolang Teas</a>
+                        </div>
+                    </div>
+    
+                    <div class="popular-card">
+                        <div class="popular-img">
+                            <img class="img-fluid" src="./img/Popular/popular_2.jpg" alt="Oolang Teas">
+                        </div>
+                        <div class="popular-content">
+                            <h3 class="title">Oolang Teas</h3>
+                            <p class="content">Nullam aliquet vestibulum augue non varius, cras nec congue elitos lorem.
+                                Duis tristique del ante nec aliquam praesent urna tellus.</p>
+                            <a href="#" class="pass-link">Shop Oolang Teas</a>
+                        </div>
+                    </div>
+    
+                    <div class="popular-card">
+                        <div class="popular-img">
+                            <img class="img-fluid" src="./img/Popular/popular_3.jpg" alt="Oolang Teas">
+                        </div>
+                        <div class="popular-content">
+                            <h3 class="title">Oolang Teas</h3>
+                            <p class="content">Nullam aliquet vestibulum augue non varius, cras nec congue elitos lorem.
+                                Duis tristique del ante nec aliquam praesent urna tellus.</p>
+                            <a href="#" class="pass-link">Shop Oolang Teas</a>
+                        </div>
+                    </div>
+        </section>
     </main>
     <!-- Main Ends -->
 
@@ -242,6 +349,15 @@
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+        crossorigin="anonymous"></script>
+
+    <!-- Owl Carousel -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+        crossorigin="anonymous"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+        integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
         crossorigin="anonymous"></script>
 
     <!-- My Script -->
