Subscription and Services are done

--- a/index.html
+++ b/index.html
@@ -634,7 +634,6 @@
                 <div class="all-images">
                     <a href="#" class="pass-link">View All Images</a>
                 </div>
-
             </div>
         </section>
 
@@ -694,7 +693,68 @@
 
                     </div>
                 </div>
+        </section>
 
+        <!-- Subscribe -->
+        <section id="subscribe">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 offset-lg-6">
+                        <div class="section-heading">
+                            <h2 class="section-header text-left">Newsletter signup.</h2>
+                            <p class="section-paragraph text-left text-white">Get the latest updates on new products and upcoming sales</p>
+                        </div>
+                        <form class="subscription-form">
+                            <input type="email" name="email" id="email" placeholder="Your email address">
+                            <input type="submit" value="Subscribe" class="pass-link">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Services -->
+        <section id="services">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 col-lg-3">
+                        <div class="service">
+                            <i class="fas fa-globe-americas fa-3x"></i>
+                            <div class="service-content">
+                                <h6>Worldwide Free Shipping</h6>
+                                <p class="description">Find out more</p>
+                            </div>  
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-3">
+                        <div class="service">
+                            <i class="fas fa-undo fa-3x"></i>
+                            <div class="service-content">
+                                <h6>Worldwide Free Shipping</h6>
+                                <p class="description">Find out more</p>
+                            </div>  
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-3">
+                        <div class="service">
+                            <i class="fas fa-shield-alt fa-3x"></i>
+                            <div class="service-content">
+                                <h6>Worldwide Free Shipping</h6>
+                                <p class="description">Find out more</p>
+                            </div>  
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-3">
+                        <div class="service">
+                            <i class="fas fa-gift fa-3x"></i>
+                            <div class="service-content">
+                                <h6>Worldwide Free Shipping</h6>
+                                <p class="description">Find out more</p>
+                            </div>  
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <!-- Main Ends -->
