Footer-Items Section is done

--- a/index.html
+++ b/index.html
@@ -759,6 +759,116 @@
     </main>
     <!-- Main Ends -->
 
+    <!-- Footer Starts -->
+    <footer id="footer">
+        
+        <!-- Footer Items -->
+        <section id="footer-items">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="footer-logo">
+                            <img src="./img/Logo/footer_logo.png" alt="Footer Logo">
+                        </div>
+                        <div class="address">
+                            <small>685 Market Street, </small>
+                            <small>San Fransisco, CA, 94105, </small>
+                            <small>United States</small>
+                        </div>
+                        <div class="contact">
+                            <small>Call us: +1 689 699 TEATEA</small>
+                            <small>Email: <a href="#">support@TEATEA.com</a></small>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <h5 class="footer-heading">Shop</h5>
+                        <ul class="footer-list">
+                            <li class="footer-list-item">
+                                <a href="#" class="footer-list-link">Teas</a>
+                            </li>
+                            <li class="footer-list-item">
+                                <a href="#" class="footer-list-link">Teaware</a>
+                            </li>
+                            <li class="footer-list-item">
+                                <a href="#" class="footer-list-link">Loose Leaf Tea</a>
+                            </li>
+                            <li class="footer-list-item">
+                                <a href="#" class="footer-list-link">Tea Bags</a>
+                            </li>
+                            <li class="footer-list-item">
+                                <a href="#" class="footer-list-link">Lookbook</a>
+                            </li>
+                            <li class="footer-list-item">
+                                <a href="#" class="footer-list-link">Shop By Brand</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-2">
+                        <h5 class="footer-heading">About Us</h5>
+                        <ul class="footer-list">
+                            <li class="footer-list-item">
+                                <a href="#" class="footer-list-link">Blog</a>
+                            </li>
+                            <li class="footer-list-item">
+                                <a href="#" class="footer-list-link">Press Releases</a>
+                            </li>
+                            <li class="footer-list-item">
+                                <a href="#" class="footer-list-link">About Us</a>
+                            </li>
+                            <li class="footer-list-item">
+                                <a href="contact.html" class="footer-list-link">Contact Us</a>
+                            </li>
+                            <li class="footer-list-item">
+                                <a href="#" class="footer-list-link">Find A Store</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-2">
+                        <h5 class="footer-heading">Customer Care</h5>
+                        <ul class="footer-list">
+                            <li class="footer-list-item">
+                                <a href="#" class="footer-list-link">Shipping</a>
+                            </li>
+                            <li class="footer-list-item">
+                                <a href="#" class="footer-list-link">Returns Policy</a>
+                            </li>
+                            <li class="footer-list-item">
+                                <a href="#" class="footer-list-link">Terms And Conditions</a>
+                            </li>
+                            <li class="footer-list-item">
+                                <a href="#" class="footer-list-link">Privacy Policy</a>
+                            </li>
+                            <li class="footer-list-item">
+                                <a href="#" class="footer-list-link">FAQs</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-2">
+                        <h5 class="footer-heading">Follow Us</h5>
+                        <div class="social-media-icons">
+                            <a href="#">
+                                <i class="fab fa-facebook-square fa-2x"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-facebook-messenger fa-2x"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-twitter fa-2x"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-pinterest fa-2x"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-instagram fa-2x"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </footer>
+    <!-- Footer Ends -->
+
 
     <!-- Boostrap Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
