--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
                             <p class="section-paragraph text-left text-white">Get the latest updates on new products and upcoming sales</p>
                         </div>
                         <form class="subscription-form">
-                            <input type="email" name="email" id="email" placeholder="Your email address">
+                            <input type="email" name="email" id="email" placeholder="Your email address" autocomplete="off">
                             <input type="submit" value="Subscribe" class="pass-link">
                         </form>
                     </div>
@@ -862,6 +862,25 @@
                                 <i class="fab fa-instagram fa-2x"></i>
                             </a>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Footer Content -->
+        <section class="footer-content">
+            <div class="container">
+                <div class="footer-container">
+                    <div class="copyright-container">
+                        <small class="copyright">&copy; 2020 Tea | Tea Demo</small>
+                    </div>
+                    <div class="payment-methods">
+                        <img src="./img/Icons/Payment Methods/visa.PNG" alt="Visa">
+                        <img src="./img/Icons/Payment Methods/master.PNG" alt="Visa">
+                        <img src="./img/Icons/Payment Methods/american-express.PNG" alt="Visa">
+                        <img src="./img/Icons/Payment Methods/discover.PNG" alt="Visa">
+                        <img src="./img/Icons/Payment Methods/master-blue.PNG" alt="Visa">
+                        <img src="./img/Icons/Payment Methods/paypal.PNG" alt="Visa">
                     </div>
                 </div>
             </div>
