--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
                                     </li>
                                     <li class="main-nav-item">
-                                        <a href="#" class="main-nav-link">Faqs</a>
+                                        <a href="faq.html" class="main-nav-link">Faqs</a>
                                     </li>
                                 </ul>
                             </div>
@@ -861,7 +861,7 @@
                                 <a href="#" class="footer-list-link">Privacy Policy</a>
                             </li>
                             <li class="footer-list-item">
-                                <a href="#" class="footer-list-link">FAQs</a>
+                                <a href="faq.html" class="footer-list-link">FAQs</a>
                             </li>
                         </ul>
                     </div>
