Blogs page is done

--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
                         <h5 class="footer-heading">About Us</h5>
                         <ul class="footer-list">
                             <li class="footer-list-item">
-                                <a href="#" class="footer-list-link">Blog</a>
+                                <a href="blogs.html" class="footer-list-link">Blog</a>
                             </li>
                             <li class="footer-list-item">
                                 <a href="#" class="footer-list-link">Press Releases</a>
