Details part is done

--- a/blogs.html
+++ b/blogs.html
@@ -189,7 +189,7 @@
     <!-- Header Ends -->
 
     <!-- Main Starts -->
-    <section id="blog-main">
+    <main id="blog-main">
         <div class="container">
             <!-- Breadcrumb -->
             <ul class="breadcrumb-section">
@@ -462,7 +462,7 @@
                 </div>
             </section>
         </div>
-    </section>
+    </main>
     <!-- Main Ends -->
 
     <!-- Footer Starts -->
