--- a/index.html
+++ b/index.html
@@ -374,8 +374,10 @@
                 <div class="products-container">
                     <div class="product">
                         <div class="product-img">
-                            <img class="img-fluid main-img" src="./img/Products/product_1.jpg" alt="Product1">
-                            <img class="img-fluid hover-img" src="./img/Products/product_hover_1.jpg" alt="Product1">
+                            <a href="details.html">
+                                <img class="img-fluid main-img" src="./img/Products/product_1.jpg" alt="Product1">
+                                <img class="img-fluid hover-img" src="./img/Products/product_hover_1.jpg" alt="Product1">
+                            </a>
                         </div>
                         <div class="layer">
                             <a href="#" class="layer-btn">Add To Cart</a>
@@ -398,8 +400,10 @@
 
                     <div class="product">
                         <div class="product-img">
-                            <img class="img-fluid main-img" src="./img/Products/product_2.jpg" alt="Product2">
-                            <img class="img-fluid hover-img" src="./img/Products/product_hover_2.jpg" alt="Product2">
+                            <a href="details.html">
+                                <img class="img-fluid main-img" src="./img/Products/product_2.jpg" alt="Product2">
+                                <img class="img-fluid hover-img" src="./img/Products/product_hover_2.jpg" alt="Product2">
+                            </a>
                         </div>
                         <div class="layer">
                             <a href="#" class="layer-btn">+ Select Options</a>
@@ -422,8 +426,10 @@
 
                     <div class="product">
                         <div class="product-img">
-                            <img class="img-fluid main-img" src="./img/Products/product_3.jpg" alt="Product3">
-                            <img class="img-fluid hover-img" src="./img/Products/product_hover_3.jpg" alt="Product3">
+                            <a href="#">
+                                <img class="img-fluid main-img" src="./img/Products/product_3.jpg" alt="Product3">
+                                <img class="img-fluid hover-img" src="./img/Products/product_hover_3.jpg" alt="Product3">
+                            </a>
                         </div>
                         <div class="layer">
                             <a href="#" class="layer-btn">+ Select Options</a>
@@ -446,8 +452,10 @@
 
                     <div class="product">
                         <div class="product-img">
-                            <img class="img-fluid main-img" src="./img/Products/product_4.jpg" alt="Product4">
-                            <img class="img-fluid hover-img" src="./img/Products/product_hover_4.jpg" alt="Product4">
+                            <a href="details.html">
+                                <img class="img-fluid main-img" src="./img/Products/product_4.jpg" alt="Product4">
+                                <img class="img-fluid hover-img" src="./img/Products/product_hover_4.jpg" alt="Product4">
+                            </a>
                         </div>
                         <div class="layer">
                             <a href="#" class="layer-btn">+ Select Options</a>
