Details page is done and Some updates in homepage

--- a/index.html
+++ b/index.html
@@ -379,21 +379,20 @@
                                 <img class="img-fluid hover-img" src="./img/Products/product_hover_1.jpg" alt="Product1">
                             </a>
                         </div>
+                        
                         <div class="layer">
                             <a href="#" class="layer-btn">Add To Cart</a>
                         </div>
 
                         <div class="product-content">
                             <a href="#" class="product-header">Lamcorper ostique amattis drosele</a>
-                            <div class="price-stars">
+                            <div class="price-container">
                                 <span class="price">$69.00</span>
-                                <span class="product-stars">
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                </span>
+                            </div>
+                            <div class="colors">
+                                <div class="color-container">
+                                    <button class="color dark"></button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -405,31 +404,46 @@
                                 <img class="img-fluid hover-img" src="./img/Products/product_hover_2.jpg" alt="Product2">
                             </a>
                         </div>
+                        <div class="product-badges">
+                            <div class="badge sale-badge">-71%</div>
+                            <div class="badge bundle-badge">Bundle</div>
+                        </div>
                         <div class="layer">
                             <a href="#" class="layer-btn">+ Select Options</a>
                         </div>
 
                         <div class="product-content">
                             <a href="#">Lamcorper ostique amattis drosele</a>
-                            <div class="price-stars">
-                                <span class="price">$69.00</span>
-                                <span class="product-stars">
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
+                            <div class="price-container">
+                                <span class="price">
+                                    <span class="old-price">$69.00</span>
+                                    from
+                                    <span class="new-price">$20.00</span>
                                 </span>
+                            </div>
+                            <div class="colors">
+                                <div class="color-container">
+                                    <button class="color green"></button>
+                                </div>
+                                <div class="color-container">
+                                    <button class="color dark"></button>
+                                </div>
+                                <div class="color-container">
+                                    <button class="color beige"></button>
+                                </div>
                             </div>
                         </div>
                     </div>
 
                     <div class="product">
                         <div class="product-img">
-                            <a href="#">
+                            <a href="details.html">
                                 <img class="img-fluid main-img" src="./img/Products/product_3.jpg" alt="Product3">
                                 <img class="img-fluid hover-img" src="./img/Products/product_hover_3.jpg" alt="Product3">
                             </a>
+                        </div>
+                        <div class="product-badges">
+                            <div class="badge sale-badge">-45%</div>
                         </div>
                         <div class="layer">
                             <a href="#" class="layer-btn">+ Select Options</a>
@@ -437,15 +451,23 @@
 
                         <div class="product-content">
                             <a href="#">Lamcorper ostique amattis drosele</a>
-                            <div class="price-stars">
-                                <span class="price">$69.00</span>
-                                <span class="product-stars">
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
+                            <div class="price-container">
+                                <span class="price">
+                                    <span class="old-price">$69.00</span>
+                                    from
+                                    <span class="new-price">$38.00</span>
                                 </span>
+                            </div>
+                            <div class="colors">
+                                <div class="color-container">
+                                    <button class="color dark"></button>
+                                </div>
+                                <div class="color-container">
+                                    <button class="color beige"></button>
+                                </div>
+                                <div class="color-container">
+                                    <button class="color white"></button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -457,29 +479,42 @@
                                 <img class="img-fluid hover-img" src="./img/Products/product_hover_4.jpg" alt="Product4">
                             </a>
                         </div>
+                        <div class="product-badges">
+                            <div class="badge sale-badge">-45%</div>
+                        </div>
                         <div class="layer">
                             <a href="#" class="layer-btn">+ Select Options</a>
                         </div>
 
                         <div class="product-content">
                             <a href="#">Lamcorper ostique amattis drosele</a>
-                            <div class="price-stars">
-                                <span class="price">$69.00</span>
-                                <span class="product-stars">
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
+                            <div class="price-container">
+                                <span class="price">
+                                    <span class="old-price">$69.00</span>
+                                    from
+                                    <span class="new-price">$38.00</span>
                                 </span>
+                            </div>
+                            <div class="colors">
+                                <div class="color-container">
+                                    <button class="color dark"></button>
+                                </div>
+                                <div class="color-container">
+                                    <button class="color beige"></button>
+                                </div>
                             </div>
                         </div>
                     </div>
 
                     <div class="product">
                         <div class="product-img">
-                            <img class="img-fluid main-img" src="./img/Products/product_5.png" alt="Product5">
-                            <img class="img-fluid hover-img" src="./img/Products/product_hover_5.png" alt="Product5">
+                            <a href="details.html">
+                                <img class="img-fluid main-img" src="./img/Products/product_5.png" alt="Product5">
+                                <img class="img-fluid hover-img" src="./img/Products/product_hover_5.png" alt="Product5">
+                            </a>
+                        </div>
+                        <div class="product-badges">
+                            <div class="badge sale-badge">-47%</div>
                         </div>
                         <div class="layer">
                             <a href="#" class="layer-btn">+ Select Options</a>
@@ -487,15 +522,23 @@
 
                         <div class="product-content">
                             <a href="#">Lamcorper ostique amattis drosele</a>
-                            <div class="price-stars">
-                                <span class="price">$69.00</span>
-                                <span class="product-stars">
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
+                            <div class="price-container">
+                                <span class="price">
+                                    <span class="old-price">$69.00</span>
+                                    from
+                                    <span class="new-price">$36.80</span>
                                 </span>
+                            </div>
+                            <div class="colors">
+                                <div class="color-container">
+                                    <button class="color green"></button>
+                                </div>
+                                <div class="color-container">
+                                    <button class="color dark"></button>
+                                </div>
+                                <div class="color-container">
+                                    <button class="color beige"></button>
+                                </div>
                             </div>
                         </div>
                     </div>
