--- a/details.html
+++ b/details.html
@@ -22,6 +22,9 @@
 </head>
 
 <body>
+    <!-- Back to Top -->
+    <button id="backToTop"><i class="fas fa-chevron-up"></i></button>
+    
     <!-- Header Starts -->
     <header id="header">
         <!-- Language_Currency -->
