Fixed navbar is done

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
         </div>
 
         <!-- Navbar -->
+        
         <div class="logo-navbar">
             <div class="container">
                 <div class="navbar-container">
@@ -997,6 +998,7 @@
         crossorigin="anonymous"></script>
 
     <!-- My Script -->
+    <script src="js/shared.js"></script>
     <script src="js/main.js"></script>
 </body>
 
