--- a/blogs.html
+++ b/blogs.html
@@ -40,7 +40,7 @@
 <body>
     <!-- Back to Top -->
     <button id="backToTop"><i class="fas fa-chevron-up"></i></button>
-    
+
     <!-- Header Starts -->
     <header id="header">
         <!-- Language_Currency -->
@@ -622,7 +622,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
         integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
         crossorigin="anonymous"></script>
+
     <!-- My Script -->
+    <script src="js/shared.js"></script>
     <script src="js/main.js"></script>
 </body>
 
