--- a/faq.html
+++ b/faq.html
@@ -23,7 +23,7 @@
 <body>
     <!-- Back to Top -->
     <button id="backToTop"><i class="fas fa-chevron-up"></i></button>
-    
+
     <!-- Header Starts -->
     <header id="header">
         <!-- Language_Currency -->
@@ -561,7 +561,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
         integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
         crossorigin="anonymous"></script>
+
     <!-- My Script -->
+    <script src="js/shared.js"></script>
     <script src="js/faq.js"></script>
 </body>
 
