Products slider updated in home page

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                         </div>
                         
                         <div class="layer">
-                            <a href="#" class="layer-btn">Add To Cart</a>
+                            <a href="#" class="layer-btn">+ Select Options</a>
                         </div>
 
                         <div class="product-content">
