Project is done

--- a/blogs.html
+++ b/blogs.html
@@ -127,27 +127,74 @@
 
                                 <ul class="main-nav">
                                     <li class="main-nav-item">
-                                        <a href="#" class="main-nav-link">Teas</a>
+                                        <a href="#" class="main-nav-link dropdown-toggle">Teas</a>
+                                        <ul class="dropdown-menu">
+                                            <a href="#" class="dropdown-item">
+                                                Loremica
+                                            </a>
+                                            <a href="#" class="dropdown-item">
+                                                Cosmopolis
+                                            </a>
+                                            <a href="#" class="dropdown-item">
+                                                Metropolitanos
+                                            </a>
+                                            <a href="#" class="dropdown-item">
+                                                Milancelos
+                                            </a>
+                                            <a href="#" class="dropdown-item">
+                                                Sarcuso
+                                            </a>
+                                        </ul>
                                     </li>
                                     <li class="main-nav-item">
                                         <a href="#" class="main-nav-link">Teaware</a>
                                     </li>
                                     <li class="main-nav-item">
-                                        <a href="#" class="main-nav-link">Loose Leaf Tea</a>
+                                        <a href="#" class="main-nav-link dropdown-toggle">
+                                            Loose Leaf Tea
+                                        </a>
+                                        <ul class="dropdown-menu">
+                                            <a href="#" class="dropdown-item">
+                                                Black Tea
+                                            </a>
+                                            <a href="#" class="dropdown-item">
+                                                Rooibos
+                                            </a>
+                                            <a href="#" class="dropdown-item">
+                                                Green Tea
+                                            </a>
+                                            <a href="#" class="dropdown-item">
+                                                Herbal Tea
+                                            </a>
+                                            <a href="#" class="dropdown-item">
+                                                I love CHAI
+                                            </a>
+                                        </ul>
                                     </li>
                                     <li class="main-nav-item">
                                         <a href="#" class="main-nav-link">Tea Bags</a>
                                     </li>
                                     <li class="main-nav-item dropdown">
-                                        <a href="#" class="main-nav-link dropdown-toggle"
-                                            data-toggle="dropdown">Lookbook</a>
+                                        <a href="#" class="main-nav-link dropdown-toggle">Lookbook</a>
                                         <ul class="dropdown-menu">
-                                            <li class="dropdown-item"><a href="#">Cosmopolis</a></li>
-                                            <li class="dropdown-item"><a href="#">Sarcus</a></li>
-                                            <li class="dropdown-item"><a href="#">Fermentumo</a></li>
-                                            <li class="dropdown-item"><a href="#">Habitasse</a></li>
-                                            <li class="dropdown-item"><a href="#">Milancelos</a></li>
-                                            <li class="dropdown-item"><a href="#">Malesuado</a></li>
+                                            <a href="#" class="dropdown-item">
+                                                Cosmopolis
+                                            </a>
+                                            <a href="#" class="dropdown-item">
+                                                Sarcus
+                                            </a>
+                                            <a href="#" class="dropdown-item">
+                                                Fermentumo
+                                            </a>
+                                            <a href="#" class="dropdown-item">
+                                                Habitasse
+                                            </a>
+                                            <a href="#" class="dropdown-item">
+                                                Milancelos
+                                            </a>
+                                            <a href="#" class="dropdown-item">
+                                                Malesuado
+                                            </a>
                                         </ul>
 
                                     </li>
